Styled tweet content

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chance": "^1.0.2",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "jquery": "^3.1.0",
     "md5": "^2.1.0",
     "mongodb": "^2.1.16"
   },
