--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.13.4",
     "jquery": "^3.1.0",
     "md5": "^2.1.0",
-    "mongodb": "^2.1.16"
+    "mongodb": "^2.1.16",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
